gobmkida/c2/attack4
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack4/src/engine/reading.c:3601:29: error: use of undeclared identifier 'byte_9B389F'
|| v17 == ( unsigned __int8)byte_9B389F[v19] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack4/src/engine/reading.c:3602:29: error: use of undeclared identifier 'byte_9B388C'
|| v17 == ( unsigned __int8)byte_9B388C[v19] 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack4/src/obj/1/reading.o] Error 1
